# gender_identification

./: Cargo.toml  README.md  boysname.txt  girlsname.txt
src/: lib.rs
