[package]
name = "gender_identification"
version = "0.1.3"
authors = ["abdul azam <abdulazam1996@gmail.com>"]
edition = "2018"
description = "write the let name = gender_identification::gender(String::from(yourname with double commans));"
license = "MIT"
repository = "https://github.com/abdulazam19/gender_identification"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
